CREATE TABLE "status_articles" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "description" text,
  "code" varchar(5),
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "tags" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "description" text,
  "content" text,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "article_tag" (
  "id_tag" int,
  "id_article" int,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now()),
  PRIMARY KEY ("id_tag", "id_article")
);

CREATE TABLE "source_websites" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now()),
  "name" varchar(128),
  "description" text,
  "url" text,
  "iamgeUrl" text
);

CREATE TABLE "articles" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now()),
  "date_published" date,
  "title" text,
  "description" text,
  "content" text,
  "slug" text,
  "original_content" text,
  "original_title" text,
  "original_url" text,
  "original_url_hash" text,
  "id_status_article" int,
  "id_source_website" int
);

CREATE TABLE "acceess_logs" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "created_at" timestamp DEFAULT (now()),
  "id_article" int,
  "metadata" JSONB
);

CREATE INDEX ON "articles" ("date_published");

CREATE INDEX ON "articles" ("title");

CREATE INDEX ON "articles" ("description");

CREATE INDEX ON "articles" ("slug");

CREATE INDEX ON "articles" ("original_url_hash");

CREATE INDEX ON "articles" ("original_url");

CREATE INDEX ON "articles" ("title", "date_published");

CREATE INDEX ON "articles" ("created_at");

CREATE INDEX ON "articles" ("updated_at");

CREATE INDEX ON "articles" ("updated_at", "created_at", "date_published");

CREATE INDEX ON "acceess_logs" ("created_at");

CREATE INDEX ON "acceess_logs" ("id_article");

ALTER TABLE "articles" ADD FOREIGN KEY ("id_status_article") REFERENCES "status_articles" ("id");

ALTER TABLE "articles" ADD FOREIGN KEY ("id_source_website") REFERENCES "source_websites" ("id");

ALTER TABLE "article_tag" ADD FOREIGN KEY ("id_article") REFERENCES "articles" ("id");

ALTER TABLE "article_tag" ADD FOREIGN KEY ("id_tag") REFERENCES "tags" ("id");

ALTER TABLE "acceess_logs" ADD FOREIGN KEY ("id_article") REFERENCES "articles" ("id");

